--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.11.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
@@ -24,6 +25,7 @@
     "@vue/cli-plugin-unit-mocha": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "babel-plugin-component": "^1.1.1",
     "chai": "^4.1.2",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
